--- a/back-end/package.json
+++ b/back-end/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.3",
+    "mongoose": "^6.2.10",
     "socket.io": "^4.4.1"
   },
   "devDependencies": {
